Fixes issue with symbol alignment with small font sizes

--- a/src/client/src/style.scss
+++ b/src/client/src/style.scss
@@ -8,3 +8,11 @@
   background: none;
   color: inherit;
 }
+
+number-flow-react::part(left),
+number-flow-react::part(right),
+number-flow-react::part(left)::after,
+number-flow-react::part(right)::after,
+number-flow-react::part(symbol) {
+  padding: calc(var(--number-flow-mask-height, 0.25em) / 2) 0;
+}
